--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: John Doe # your name (or website title) here
+title: Hsueh-Ying Lai # your name (or website title) here
 logo: "/images/60933441_1194092394103971_5161725145538101248_n.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
