--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,8 @@
 title: Hsueh-Ying Lai # your name (or website title) here
 logo: "/images/60933441_1194092394103971_5161725145538101248_n.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
-  <br><br>
-  Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  I'm a master student at [National Chiao-Tung University](https://www.nctu.edu.tw/)
+  <br><br> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
