--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@ title: Hsueh-Ying Lai # your name (or website title) here
 logo: "/images/60933441_1194092394103971_5161725145538101248_n.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   I'm a master student at <a href="https://www.nctu.edu.tw/">National Chiao-Tung University</a>
-  <br><br> 
+  <br>
+  Email: lelimite4444 [at] gmail [dot] com
+  <br>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
